--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,14 +4,17 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  padding: 9rem 0;
+  flex: 33.33%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.main div input {
+  margin: 10px;
+}
 .footer {
   display: flex;
   flex: 1;
